[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]
[ext_resource path="res://Theme.tres" type="Theme" id=2]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Scale" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 368.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 80, 48 )
theme = ExtResource( 2 )
text = "Weight:
1.0 kg"

[node name="Down" type="Button" parent="."]
margin_left = 336.0
margin_top = 648.0
margin_right = 392.0
margin_bottom = 704.0
theme = ExtResource( 2 )
text = "v"

[node name="Up" type="Button" parent="."]
margin_left = 336.0
margin_top = 504.0
margin_right = 392.0
margin_bottom = 560.0
theme = ExtResource( 2 )
text = "^"

[node name="Left" type="Button" parent="."]
margin_left = 264.0
margin_top = 576.0
margin_right = 320.0
margin_bottom = 632.0
theme = ExtResource( 2 )
text = "<"

[node name="Right" type="Button" parent="."]
margin_left = 408.0
margin_top = 576.0
margin_right = 464.0
margin_bottom = 632.0
theme = ExtResource( 2 )
text = ">"

[node name="Death" type="ColorRect" parent="."]
visible = false
margin_left = 16.0
margin_top = 112.0
margin_right = 464.0
margin_bottom = 704.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Death"]
margin_left = 16.0
margin_top = 16.0
margin_right = 432.0
margin_bottom = 336.0
theme = ExtResource( 2 )
text = "YOU DIED!

It's either eat or be eaten and sadly it was your turn to be food today."

[node name="Button" type="Button" parent="Death"]
margin_left = 104.0
margin_top = 464.0
margin_right = 356.0
margin_bottom = 514.0
theme = ExtResource( 2 )
text = "Try Again!"

[connection signal="button_down" from="Down" to="." method="_on_Down_button_down"]
[connection signal="button_up" from="Down" to="." method="_on_Down_button_up"]
[connection signal="button_down" from="Up" to="." method="_on_Up_button_down"]
[connection signal="button_up" from="Up" to="." method="_on_Up_button_up"]
[connection signal="button_down" from="Left" to="." method="_on_Left_button_down"]
[connection signal="button_up" from="Left" to="." method="_on_Left_button_up"]
[connection signal="button_down" from="Right" to="." method="_on_Right_button_down"]
[connection signal="button_up" from="Right" to="." method="_on_Right_button_up"]
[connection signal="pressed" from="Death/Button" to="." method="_on_Button_pressed"]
